Modify names img

--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
         <h2>Personajes Principales</h2>
         <div class="personajes-container">
             <div class="personaje-card">
-                <img src="Itadorii.jpg" alt="Yuji Itadori">
+                <img src="itadorii.jpg" alt="Yuji Itadori">
                 <div class="info">
                     <h3>Yuji Itadori</h3>
                     <p>Yuji es el protagonista principal, conocido por su gran fuerza y valentía.</p>
                 </div>
             </div>
             <div class="personaje-card">
-                <img src="Megumi.jpg" alt="Megumi Fushiguro">
+                <img src="megumi.jpg" alt="Megumi Fushiguro">
                 <div class="info">
                     <h3>Megumi Fushiguro</h3>
                     <p>Megumi es un hechicero con un estilo calmado y calculador, especializado en invocar shikigamis.</p>
                 </div>
             </div>
             <div class="personaje-card">
-                <img src="Nobara.jpg" alt="Nobara Kugisaki">
+                <img src="nobara.jpg" alt="Nobara Kugisaki">
                 <div class="info">
                     <h3>Nobara Kugisaki</h3>
                     <p>Nobara es una hechicera audaz y decidida que no tiene miedo de enfrentar a las maldiciones.</p>
