--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
                     <p>Nobara es una hechicera audaz y decidida que no tiene miedo de enfrentar a las maldiciones.</p>
                 </div>
             </div>
+            <div class="personaje-card">
+                <img src="toji.jpg" alt="Toji Fushiguro">
+                <div class="info"> 
+                  <h3>Toji Fushiguro</h3>
+                  <p>Alguien dijo chamba?, </p>
+                </div>
+            </div>
+            <div class="personaje-card">
+                <img src="maki.png" alt="Maki zen'in">
+                <div class="info">
+                    <h3>Maki zen'in</h3>
+                    <p>Maki Zenin (禪院真希 Zen'in Maki?) es uno de los personajes de la serie manga Tokyo Metropolitan Curse Technical School y su serie secuela, Jujutsu Kaisen. </p>
+                </div>
+            </div>
         </div>
     </section>
     
